Edit scale values of gallery items to prevent overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,7 +341,7 @@ input[type="submit"] {
 
     img:target {
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
-        transform: scale(1.2);
+        transform: scale(1.1);
         transition: 333ms ease-in-out;
     }
 }
@@ -464,7 +464,7 @@ input[type="submit"] {
 
     img:hover {
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
-        transform: scale(1.2);
+        transform: scale(1.1);
         transition: 333ms ease-in-out;
     }
 
